RESOLVED FIXED186550
Apply CSP checks before Content blocker checks in NetworkLoadChecker as done by CachedResourceLoader
https://bugs.webkit.org/show_bug.cgi?id=186550
Summary Apply CSP checks before Content blocker checks in NetworkLoadChecker as done ...
youenn fablet
Reported 2018-06-11 17:12:24 PDT
Apply CSP checks before Content blocker checks in NetworkLoadChecker as done by CachedResourceLoader
Attachments
Patch (3.34 KB, patch)
2018-06-11 17:13 PDT, youenn fablet
no flags
Patch (7.76 KB, patch)
2018-06-11 18:12 PDT, youenn fablet
no flags
Archive of layout-test-results from ews107 for mac-sierra-wk2 (2.72 MB, application/zip)
2018-06-11 19:06 PDT, EWS Watchlist
no flags
Patch (7.87 KB, patch)
2018-06-11 19:45 PDT, youenn fablet
no flags
Archive of layout-test-results from ews200 for win-future (12.97 MB, application/zip)
2018-06-12 06:20 PDT, EWS Watchlist
no flags
youenn fablet
Comment 1 2018-06-11 17:13:10 PDT
youenn fablet
Comment 2 2018-06-11 18:12:56 PDT
EWS Watchlist
Comment 3 2018-06-11 19:06:40 PDT
Comment on attachment 342495 [details] Patch Attachment 342495 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/8140281 New failing tests: http/tests/contentextensions/fetch-redirect-blocked.html
EWS Watchlist
Comment 4 2018-06-11 19:06:42 PDT
Created attachment 342501 [details] Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
youenn fablet
Comment 5 2018-06-11 19:45:39 PDT
EWS Watchlist
Comment 6 2018-06-12 06:20:28 PDT
Comment on attachment 342503 [details] Patch Attachment 342503 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/8145680 New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 7 2018-06-12 06:20:39 PDT
Created attachment 342528 [details] Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
youenn fablet
Comment 8 2018-06-13 14:12:16 PDT
ping review?
WebKit Commit Bot
Comment 9 2018-06-14 12:59:53 PDT
Comment on attachment 342503 [details] Patch Clearing flags on attachment: 342503 Committed r232849: <https://trac.webkit.org/changeset/232849>
WebKit Commit Bot
Comment 10 2018-06-14 12:59:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2018-06-14 13:02:10 PDT
Note You need to log in before you can comment on or make changes to this bug.