Apply CSP checks before Content blocker checks in NetworkLoadChecker as done by CachedResourceLoader https://bugs.webkit.org/show_bug.cgi?id=186550

Reviewed by Alex Christensen.

Source/WebKit:

Do CSP checks and URL upgrade before content blocker checks.

* NetworkProcess/NetworkLoadChecker.cpp:
(WebKit::NetworkLoadChecker::checkRequest):
(WebKit::NetworkLoadChecker::continueCheckingRequest):

LayoutTests:

* http/tests/contentextensions/fetch-redirect-blocked-expected.txt: Added.
* http/tests/contentextensions/fetch-redirect-blocked.html: Added.
* http/tests/contentextensions/fetch-redirect-blocked.html.json: Added.
* http/tests/contentextensions/resources/subresource-redirect.php:


Canonical link: https://commits.webkit.org/201954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232849 268f45cc-cd09-0410-ab3c-d52691b4dbfc